--- a/index.html
+++ b/index.html
@@ -30,13 +30,9 @@
             <p>This is the third slide.</p>
         </div>
     </div>
-    <script src="
-                    https://cdn.jsdelivr.net/npm/d3@7.8.5/dist/d3.min.js
-                    "></script>
+    <script src="https://cdn.jsdelivr.net/npm/d3@7.8.5/dist/d3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-annotation/2.5.1/d3-annotation.min.js"></script>
-    <script src="
-                    https://cdn.jsdelivr.net/npm/topojson-client@3.1.0/dist/topojson-client.min.js
-                "></script>
+    <script src="https://cdn.jsdelivr.net/npm/topojson-client@3.1.0/dist/topojson-client.min.js"></script>
     <!-- <script type="text/javascript" src="scripts/index.js"></script> -->
 
 </body>
